Mon Jul 13 17:21:53 BST 2009  Tom Mortimer <tom@flax.co.uk>

    * flax/searchserver/backends/xappy_backend.py,
    * flax/searchserver/application.py: Added metadata resource.

Wed Jul 01 08:00:13 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/jstemplates.py: Remove unneeded import.

Tue Jun 30 13:05:04 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/backends/xappy_backend.py: Handle
	  summary_fields being set to None.

Tue Jun 30 12:49:09 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/jstemplates.py: Slightly more robust template
	  calling.

Tue Jun 30 12:09:31 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/application.py: Fix copy-and-paste bug.

Tue Jun 30 10:32:20 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/application.py,
	  flax/searchserver/backends/xappy_backend.py: Rework and refactor.

Tue Jun 30 10:30:45 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/queries.py: Fix bugs due to minor typos.

Tue Jun 30 10:28:52 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/schema.py: Add support for spell correction in
	  xappy schema.  Reorganise a bit to be neater.

Tue Jun 30 04:40:29 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/queries.py: Add Query.filter() method.

Mon Jun 29 20:21:21 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/queries.py: Fix repr() to produce what the test
	  expects.

Mon Jun 29 20:18:11 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/jstemplates.py,
	  flax/searchserver/unittests/jstemplate_test.py: Code for
	  evaluating search templates written in javascript.

Mon Jun 29 19:37:30 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/queries.py,